--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rrdcached-binding",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Node.js lib connecting to the rrdcached",
   "main": "rrdcached.js",
   "scripts": {},
@@ -10,6 +10,7 @@
   },
   "keywords": [
     "rrdtool",
+	"rrdcached",
     "binding"
   ],
   "author": "Sebastian List",
